--- a/public/templates/css/style.css
+++ b/public/templates/css/style.css
@@ -343,12 +343,11 @@ h1, h2, h3, h4, h5, h6 {
 
 #intro .intro-content .btn-get-started {
   background: #0c2e8a;
-  border: 2px solid #0c2e8a;
 }
 
 #intro .intro-content .btn-get-started:hover {
-  background: none;
-  color: #0c2e8a;
+  background: #50d8af;
+  color: #000000;
 }
 
 #intro .intro-content .btn-projects {
