--- a/public/templates/css/style.css
+++ b/public/templates/css/style.css
@@ -1190,6 +1190,9 @@ body.mobile-nav-active #mobile-nav-toggle {
 # Footer
 --------------------------------------------------------------*/
 #footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
   background: #f2f5f8;
   padding: 0 0 30px 0;
   font-size: 14px;
